[tool.poetry]
name = "web_scraping"
version = "0.1.0"
description = ""
authors = ["WagnerHMorici <wagner.morici@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
